WDP181002-12 - Add missing classes to html, fix logo positioning on mobile viewports

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -248,7 +248,6 @@ header {
       }
 
       .logo__column {
-        border: 1px solid red;
         width: 50%;
         position: absolute;
         top: 10px;
